thirty fifth step to new crm

--- a/web-app/src/main/resources/templates/purchase.html
+++ b/web-app/src/main/resources/templates/purchase.html
@@ -235,11 +235,30 @@
     </div>
 </div>
 
+<script src="/js/utils/phoneValidation.js"></script>
+<script src="/js/utils/constants.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/error.js"></script>
+<script src="/js/modules/ClientState.js"></script>
+<script src="/js/modules/ClientPermissions.js"></script>
+<script src="/js/modules/ClientUtils.js"></script>
+<script src="/js/modules/ClientFieldFormatter.js"></script>
+<script src="/js/modules/ClientDataLoader.js"></script>
+<script src="/js/modules/ClientFilters.js"></script>
+<script src="/js/modules/ClientModal.js"></script>
+<script src="/js/modules/ClientEditor.js"></script>
+<script src="/js/modules/ClientDetailsModals.js"></script>
+<script src="/js/modules/PurchaseDataLoader.js"></script>
+<script src="/js/modules/PurchaseRenderer.js"></script>
+<script src="/js/modules/PurchaseEditModal.js"></script>
+<script src="/js/modules/PurchaseFilters.js"></script>
+<script src="/js/modules/PurchaseTypeManager.js"></script>
 <script src="/js/purchase.js"></script>
 <script src="/js/columnResizer.js"></script>
 <script src="/js/createCustomSelect.js"></script>
-<script src="/js/editClient.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/editClient.js"></script>
+<script src="/js/loadClientDetails.js"></script>
 <script src="/js/exportExcelPurchase.js"></script>
 <div id="client-modal" style="display: none;" data-source-id="" data-client-id="">
     <div class="modal-content-client">
@@ -330,8 +349,6 @@
         </table>
     </div>
 </div>
-
-<script src="/js/error.js"></script>
 
 </body>
 </html>
