--- a/web-app/src/main/resources/templates/routes.html
+++ b/web-app/src/main/resources/templates/routes.html
@@ -378,6 +378,24 @@
     <div id="loader" class="loader"></div>
 </div>
 
+<script src="/js/utils/phoneValidation.js"></script>
+<script src="/js/utils/constants.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/modules/ClientState.js"></script>
+<script src="/js/modules/ClientPermissions.js"></script>
+<script src="/js/modules/ClientUtils.js"></script>
+<script src="/js/modules/ClientFieldFormatter.js"></script>
+<script src="/js/modules/ClientDataLoader.js"></script>
+<script src="/js/modules/RouteDataLoader.js"></script>
+<script src="/js/modules/RouteRenderer.js"></script>
+<script src="/js/modules/ClientFilters.js"></script>
+<script src="/js/modules/ClientForm.js"></script>
+<script src="/js/modules/ClientModal.js"></script>
+<script src="/js/modules/ClientEditor.js"></script>
+<script src="/js/modules/ClientDetailsModals.js"></script>
+<script src="/js/modules/RouteTypeManager.js"></script>
+<script src="/js/modules/RoutePurchaseModal.js"></script>
+<script src="/js/modules/RouteContainerModal.js"></script>
 <script src="/js/routes.js"></script>
 <script src="/js/columnResizer.js"></script>
 <script src="/js/createCustomSelect.js"></script>
