--- a/web-app/src/main/resources/templates/clients.html
+++ b/web-app/src/main/resources/templates/clients.html
@@ -313,6 +313,22 @@
     <div id="loader" class="loader"></div>
 </div>
 
+<script src="/js/utils/phoneValidation.js"></script>
+<script src="/js/utils/constants.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/modules/ClientState.js"></script>
+<script src="/js/modules/ClientPermissions.js"></script>
+<script src="/js/modules/ClientDOMCache.js"></script>
+<script src="/js/modules/ClientUtils.js"></script>
+<script src="/js/modules/ClientFieldFormatter.js"></script>
+<script src="/js/modules/ClientDataLoader.js"></script>
+<script src="/js/modules/ClientRenderer.js"></script>
+<script src="/js/modules/ClientFilters.js"></script>
+<script src="/js/modules/ClientForm.js"></script>
+<script src="/js/modules/ClientModal.js"></script>
+<script src="/js/modules/ClientEditor.js"></script>
+<script src="/js/modules/ClientTypeManager.js"></script>
+<script src="/js/modules/ClientDetailsModals.js"></script>
 <script src="/js/clients.js"></script>
 <script src="/js/columnResizer.js"></script>
 <script src="/js/createCustomSelect.js"></script>
