thirty sixth step to new crm

--- a/web-app/src/main/resources/templates/finance.html
+++ b/web-app/src/main/resources/templates/finance.html
@@ -354,8 +354,17 @@
     </div>
 </div>
 
-<script src="/js/common.js"></script>
+<script src="/js/utils/constants.js"></script>
+<script src="/js/error.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/modules/FinanceUtils.js"></script>
+<script src="/js/modules/FinanceDataLoader.js"></script>
+<script src="/js/modules/FinanceRenderer.js"></script>
+<script src="/js/modules/FinanceFilters.js"></script>
+<script src="/js/modules/FinanceTabs.js"></script>
+<script src="/js/modules/FinanceExchangeRateModal.js"></script>
 <script src="/js/finance.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
 
