--- a/web-app/src/main/resources/templates/inventory.html
+++ b/web-app/src/main/resources/templates/inventory.html
@@ -133,9 +133,14 @@
     <div id="loader" class="loader"></div>
 </div>
 
+<script src="/js/utils/constants.js"></script>
+<script src="/js/error.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/modules/InventoryDataLoader.js"></script>
+<script src="/js/modules/InventoryRenderer.js"></script>
+<script src="/js/modules/InventoryModal.js"></script>
 <script src="/js/inventory.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/error.js"></script>
 
 </body>
 </html>
