--- a/web-app/src/main/resources/templates/stock.html
+++ b/web-app/src/main/resources/templates/stock.html
@@ -912,9 +912,16 @@
 </div>
 
 <script src="https://unpkg.com/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="/js/utils/constants.js"></script>
+<script src="/js/error.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/modules/StockUtils.js"></script>
+<script src="/js/modules/StockDataLoader.js"></script>
+<script src="/js/modules/StockRenderer.js"></script>
+<script src="/js/modules/StockFilters.js"></script>
+<script src="/js/modules/StockModal.js"></script>
 <script src="/js/stock.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/error.js"></script>
 
 </body>
 </html>
