--- a/web-app/src/main/resources/templates/containers.html
+++ b/web-app/src/main/resources/templates/containers.html
@@ -196,11 +196,28 @@
 </div>
 
 
-<script src="/js/containers.js"></script>
+<script src="/js/utils/phoneValidation.js"></script>
+<script src="/js/utils/constants.js"></script>
+<script src="/js/utils/dropdownLoader.js"></script>
+<script src="/js/error.js"></script>
+<script src="/js/modules/ClientState.js"></script>
+<script src="/js/modules/ClientPermissions.js"></script>
+<script src="/js/modules/ClientUtils.js"></script>
+<script src="/js/modules/ClientFieldFormatter.js"></script>
+<script src="/js/modules/ClientDataLoader.js"></script>
+<script src="/js/modules/ClientFilters.js"></script>
+<script src="/js/modules/ClientModal.js"></script>
+<script src="/js/modules/ClientEditor.js"></script>
+<script src="/js/modules/ClientRenderer.js"></script>
+<script src="/js/modules/ClientDetailsModals.js"></script>
+<script src="/js/modules/ContainerDataLoader.js"></script>
+<script src="/js/modules/ContainerRenderer.js"></script>
+<script src="/js/modules/ContainerFilters.js"></script>
+<script src="/js/modules/ContainerTypeManager.js"></script>
 <script src="/js/columnResizer.js"></script>
 <script src="/js/createCustomSelect.js"></script>
-<script src="/js/editClient.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/containers.js"></script>
 <script src="/js/exportExcelContainer.js"></script>
 <div id="client-modal" style="display: none;" data-source-id="" data-client-id="">
     <div class="modal-content-client">
@@ -315,8 +332,6 @@
         </table>
     </div>
 </div>
-
-<script src="/js/error.js"></script>
 
 </body>
 </html>
