--- a/web-app/src/main/resources/static/css/common.css
+++ b/web-app/src/main/resources/static/css/common.css
@@ -573,8 +573,8 @@ nav ul li a:hover {
     font-weight: bold;
     cursor: pointer;
     position: absolute;
-    right: 1em;
-    top: 0.5em;
+    right: 0.5em;
+    top: 0;
     line-height: 1;
 }
 
